--- a/style.css
+++ b/style.css
@@ -95,6 +95,11 @@ button {
 .footer {
     background-color: #1F2937;
     color: #F9FAF8;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: -webkit-fill-available;
 }
 
 .main-square {
