Add dimensions for the first image of 2° part

--- a/style.css
+++ b/style.css
@@ -216,3 +216,9 @@ button {
 #fujinomiya-japan {
     max-height: 300px;
 }
+
+#coronavirus-statistics {
+    max-width: 150px;
+    height: 150px;
+    border-radius: 4px;
+}
