Resize coronavirus image

--- a/style.css
+++ b/style.css
@@ -217,7 +217,8 @@ button {
     max-height: 300px;
 }
 
-.coronavirus-statistics {
+.coronavirus-statistics,
+.coronavirus {
     max-width: 150px;
     height: 150px;
     border-radius: 4px;
